<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_text" />

    <EditText
        android:id="@+id/editN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_hint_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/edit_start_value" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPercentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_label_text" />

        <TextView
            android:id="@+id/txtPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ready_percent_text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAbort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_abort_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_label_text" />

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_text" />
    </LinearLayout>

</LinearLayout>